# Car-System-Mockup

./: .gitignore  LICENSE  README.md
mockup-car-sim/: CMakeLists.txt  sdkconfig
mockup-car-sim/docs/: status_proiect.md
mockup-car-sim/main/: CMakeLists.txt  hello_world_main.c
mockup-car-sim/main/config/: hcsr04_config.h  motor_ctrl_config.h  oled_config.h  project_config.h  rgb_led_config.h  rotary_encoder_config.h
mockup-car-sim/main/drivers/hcsr04/: hcsr04.c  hcsr04.h
mockup-car-sim/main/drivers/motor_ctrl_i2c/: motor_ctrl_i2c.c  motor_ctrl_i2c.h
mockup-car-sim/main/drivers/oled_i2c/: oled_i2c.c  oled_i2c.h
mockup-car-sim/main/drivers/rgb_led/: rgb_led.c  rgb_led.h
mockup-car-sim/main/drivers/rotary_encoder/: rotary_encoder.c  rotary_encoder.h
mockup-car-sim/main/hal/gpio_timers/: hal_gpio_timers.c  hal_gpio_timers.h
mockup-car-sim/main/hal/i2c/: hal_i2c.c  hal_i2c.h
mockup-car-sim/main/tasks/: app_tasks.c  app_tasks.h
